--- a/big-mama/src/styles/globals.css
+++ b/big-mama/src/styles/globals.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: #151b22;
   background: linear-gradient(
       to bottom,
       transparent,
