--- a/big-mama/src/styles/CollaborativeEditor.module.css
+++ b/big-mama/src/styles/CollaborativeEditor.module.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     color: #111827;
-    overflow: hidden;
+    overflow-y: hidden;
   }
   
   .editorHeader {
@@ -22,7 +22,7 @@
     width: 100%;
     height: 100%;
     padding: 1rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     
   }
   
