--- a/big-mama/src/styles/Avatars.module.css
+++ b/big-mama/src/styles/Avatars.module.css
@@ -13,7 +13,11 @@
     height: 42px;
     background-color: #9ca3af;
     margin-left: -0.75rem;
-  }
+    -webkit-border-radius: 9999px;
+    -moz-border-radius: 9999px;
+    -ms-border-radius: 9999px;
+    -o-border-radius: 9999px;
+}
   
   .avatar:before {
     content: attr(data-tooltip);
